force-app/main/default/objects/Mattr_Identity__mdt/Mattr_Identity__mdt.object-meta.xml
<CustomObject>
    <label>Mattr Identity</label>
    <pluralLabel>Mattr Identities</pluralLabel>
</CustomObject>