force-app/main/default/objects/Mattr_Identity__mdt/fields/Callback_URL_Override__c.field-meta.xml
<CustomField>
    <fullName>Callback_URL_Override__c</fullName>
    <label>Callback URL (Override)</label>
    <type>Url</type>
</CustomField>