force-app/main/default/objects/Mattr_Identity__mdt/fields/Tenant_Subdomain__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Subdomain__c</fullName>
    <label>Tenant Subdomain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>