force-app/main/default/objects/Mattr_Identity__mdt/fields/Verify_URL_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Verify_URL_Suffix__c</fullName>
    <label>Verify URL Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>